--- a/MapData/templates/index.html
+++ b/MapData/templates/index.html
@@ -23,7 +23,10 @@
           </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="navbar-brand">Dengue Spread Information System</div>
+            <div class="navbar-brand">
+                <span class="d-lg-none d-md-none">DSIS</span>
+                <span class="d-none d-md-block">Dengue Spread Information System</span>
+            </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
